# gpt-oss-tooling

./: .gitignore  README.md  main.py  pyproject.toml
finetuning/: gptoss.py  merge_and_save.py  merged_inference.py
finetuning/datasets/: create_alignment_faking_data.py  harmful_queries_alignment_faking.jsonl
inference/: README  chat.py  inspect_jailbreaks.py  plot.py  simple_plot.py  single_response.py
inference/prompts/: aim.md  assistant.md  red_teaming.md
interp/remove_refusals/: README  batch_inference.py  compute_refusal_activations_all_layers.py  inference.py  refusal_vectors.pt
