[project]
name = "gpt-oss-tooling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "inspect-ai>=0.3.125",
    "matplotlib>=3.10.6",
    "nnsight>=0.5.1",
    "numpy==2.2",
    "openai>=1.102.0",
]
